Fix bug about jar name