@@ -1,5 +1,5 @@
 FROM openjdk:8-alpine
 WORKDIR /app
 RUN mkdir tdb_folder
-COPY target/miami-publish_1.0.0.jar .
-ENTRYPOINT ["java", "-jar", "miami-publish_1.0.0.jar"]
+COPY target/miami-publish-1.0.0.jar .
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "miami-publish-1.0.0.jar"]
